# url-shortener-v2

./: .env.example  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  run.py
.github/workflows/: ci.yml
app/: __init__.py  models.py  routes.py  shortcode.py
scripts/: create_db.py  entrypoint.sh
tests/: test_db.py  test_routes.py  test_shortcode.py
